<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <import type="androidx.core.content.ContextCompat" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:orientation="vertical">

        <include
            android:id="@+id/devLayout"
            layout="@layout/include_dev_info" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/contactDevEmail"
            android:layout_below="@id/devLayout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/view_margin_16"
                android:animateLayoutChanges="true"
                android:orientation="vertical">

                <de.rauschdo.animals.custom.OptionItem
                    android:id="@+id/ordering"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:title="@string/order_option_title" />

                <de.rauschdo.animals.custom.OptionItem
                    android:id="@+id/notificationEnabler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hasToggle="true"
                    app:title="@string/settings_notification_enabler" />

                <de.rauschdo.animals.custom.OptionItem
                    android:id="@+id/notificationTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:icon="@drawable/ic_time"
                    app:title="@string/settings_notification_title"
                    tools:subtitle="@string/settings_notification_description"
                    tools:visibility="visible" />

                <de.rauschdo.animals.custom.OptionItem
                    android:id="@+id/settingUseFavorites"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hasToggle="true"
                    app:subtitle="@string/settings_use_favorites_subtitle"
                    app:title="@string/settings_use_favorites_title" />

            </LinearLayout>

        </ScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/contactDevEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginHorizontal="@dimen/view_margin_48"
            android:layout_marginBottom="@dimen/view_margin_8"
            android:text="@string/get_in_contact" />

    </RelativeLayout>

</layout>