<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingVertical="@dimen/view_margin_8">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/app_options"
        android:textAppearance="?attr/textAppearanceHeadline6" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/groupNightModeDelegate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/nightModeNo"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_light_mode"
            app:icon="@drawable/ic_theme_light" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/nightModeYes"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_night_mode"
            app:icon="@drawable/ic_theme_dark" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/nightModeSystemDefault"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_system_default"
            app:icon="@drawable/ic_theme_default" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

</LinearLayout>
