<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="@dimen/view_margin_16"
    tools:layout_marginHorizontal="@dimen/view_margin_32">

    <TextView
        android:id="@+id/title"
        style="@style/TextStyle.Inverse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/view_margin_8"
        android:text="@string/welcome"
        android:textSize="@dimen/textsize_20"
        tools:ignore="RelativeOverlap" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/anim"
        android:layout_width="200dp"
        android:layout_height="160dp"
        android:layout_below="@id/title"
        android:layout_gravity="center_horizontal"
        app:lottie_rawRes="@raw/penguin_saying_hello" />

    <TextView
        android:id="@+id/intro_text_p1"
        style="@style/TextStyle.Inverse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="132dp"
        android:layout_marginTop="88dp"
        android:lineSpacingExtra="1dp"
        android:text="@string/intro_text" />

    <TextView
        android:id="@+id/intro_text_p2"
        style="@style/TextStyle.Inverse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/anim"
        android:layout_marginTop="@dimen/view_margin_4"
        android:lineSpacingExtra="1dp"
        android:text="@string/intro_text_2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_size_48"
        android:layout_below="@id/intro_text_p2"
        android:layout_marginTop="@dimen/view_margin_8"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="1">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnNext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:text="@string/next" />

    </LinearLayout>

</RelativeLayout>