<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:visibility="invisible"
    tools:visibility="visible">

    <!-- Duration and repeat delay must be hardcoded -->
    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/settingsShimmer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:shimmer_auto_start="false"
        app:shimmer_base_alpha="@dimen/shimmer_base_alpha"
        app:shimmer_dropoff="@dimen/shimmer_dropoff"
        app:shimmer_duration="400"
        app:shimmer_highlight_alpha="@dimen/shimmer_highlight_alpha"
        app:shimmer_intensity="@dimen/shimmer_intensity"
        app:shimmer_repeat_delay="4000"
        app:shimmer_repeat_mode="reverse"
        app:shimmer_tilt="@dimen/shimmer_tilt">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dev_card_height"
            android:layout_marginHorizontal="@dimen/view_margin_16"
            android:layout_marginTop="@dimen/dev_card_top_margin"
            app:cardBackgroundColor="@color/blue"
            app:cardCornerRadius="@dimen/card_default_radius"
            app:cardElevation="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/devStuff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingTop="@dimen/view_margin_16">

                <TextView
                    android:id="@+id/devName"
                    style="@style/TextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/view_margin_16"
                    android:text="@string/dev_name"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/devDescription"
                    style="@style/TextStyle.Subline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/view_margin_16"
                    android:text="@string/dev_description"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/devName" />

                <ImageView
                    android:id="@+id/insta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/view_margin_4"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:contentDescription="@string/dev_instagram"
                    android:focusable="true"
                    android:paddingVertical="@dimen/view_margin_8"
                    android:src="@drawable/ic_instagram"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/twitter"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/devDescription" />

                <ImageView
                    android:id="@+id/twitter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/view_margin_4"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:contentDescription="@string/dev_twitter"
                    android:focusable="true"
                    android:paddingVertical="@dimen/view_margin_8"
                    android:src="@drawable/ic_twitter"
                    app:layout_constraintBottom_toBottomOf="@id/insta"
                    app:layout_constraintEnd_toStartOf="@id/linkedin"
                    app:layout_constraintStart_toEndOf="@id/insta"
                    app:layout_constraintTop_toTopOf="@id/insta" />

                <ImageView
                    android:id="@+id/linkedin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/view_margin_4"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:contentDescription="@string/dev_linkedin"
                    android:focusable="true"
                    android:paddingVertical="@dimen/view_margin_8"
                    android:src="@drawable/ic_linkedin"
                    app:layout_constraintBottom_toBottomOf="@id/insta"
                    app:layout_constraintEnd_toStartOf="@id/github"
                    app:layout_constraintStart_toEndOf="@id/twitter"
                    app:layout_constraintTop_toTopOf="@id/insta"
                    app:tint="@color/white" />

                <ImageView
                    android:id="@+id/github"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/view_margin_4"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:contentDescription="@string/dev_github"
                    android:focusable="true"
                    android:paddingVertical="@dimen/view_margin_8"
                    android:src="@drawable/ic_github"
                    app:layout_constraintBottom_toBottomOf="@id/insta"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/linkedin"
                    app:layout_constraintTop_toTopOf="@id/insta" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </com.facebook.shimmer.ShimmerFrameLayout>

    <ImageView
        android:id="@+id/banner"
        android:layout_width="@dimen/dev_logo_size"
        android:layout_height="@dimen/dev_logo_size"
        android:layout_centerHorizontal="true"
        android:background="@drawable/profile_bg"
        android:clickable="true"
        android:contentDescription="@string/dev_name"
        android:elevation="8dp"
        android:focusable="true"
        app:srcCompat="@drawable/dev_logo" />

</RelativeLayout>
